refactor ProductService to use mappers for DTO conversions and improve response building