@@ -1,24 +1,25 @@
 package com.manav.productservice.service;
 
-
 import com.manav.productservice.dto.*;
 import com.manav.productservice.exception.CustomException;
+import com.manav.productservice.mapper.ProductMapper;
+import com.manav.productservice.mapper.ReviewMapper;
 import com.manav.productservice.model.Product;
 import com.manav.productservice.model.ProductFeatures;
 import com.manav.productservice.model.ProductImage;
 import com.manav.productservice.model.Review;
 import com.manav.productservice.repository.ProductFeaturesRepository;
 import com.manav.productservice.repository.ProductImageRepository;
-import com.manav.productservice.repository.ProductRepository;
 import com.manav.productservice.repository.ProductRedisRepository;
+import com.manav.productservice.repository.ProductRepository;
 import com.manav.productservice.service.client.ReviewRestTemplateClient;
 import io.github.resilience4j.bulkhead.annotation.Bulkhead;
 import io.github.resilience4j.circuitbreaker.annotation.CircuitBreaker;
 import io.github.resilience4j.ratelimiter.annotation.RateLimiter;
 import io.github.resilience4j.retry.annotation.Retry;
 import jakarta.transaction.Transactional;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.BeanUtils;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
@@ -30,9 +31,11 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
 import java.util.concurrent.TimeoutException;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j
+@RequiredArgsConstructor
 public class ProductService {
 
     private final ProductRepository productRepository;
@@ -40,25 +43,19 @@ public class ProductService {
     private final ProductFeaturesRepository productFeaturesRepository;
     private final ReviewRestTemplateClient reviewRestTemplateClient;
     private final ProductRedisRepository productRedisRepository;
+    private final ProductMapper productMapper;
+    private final ReviewMapper reviewMapper;
     private final Random random = new Random();
-
-    public ProductService(ProductRepository productRepository, ProductImageRepository productImageRepository, ProductFeaturesRepository productFeaturesRepository, ReviewRestTemplateClient reviewRestTemplateClient, ProductRedisRepository productRedisRepository) {
-        this.productRepository = productRepository;
-        this.productImageRepository = productImageRepository;
-        this.productFeaturesRepository = productFeaturesRepository;
-        this.reviewRestTemplateClient = reviewRestTemplateClient;
-        this.productRedisRepository = productRedisRepository;
-    }
 
     @CircuitBreaker(name = "productService", fallbackMethod = "buildFallBackProduct")
     @RateLimiter(name = "productService", fallbackMethod = "buildFallBackProduct")
     @Retry(name = "retryProductService", fallbackMethod = "buildFallBackProduct")
-    @Bulkhead(name = "bulkheadProductService",type = Bulkhead.Type.SEMAPHORE, fallbackMethod = "buildFallBackProduct")
+    @Bulkhead(name = "bulkheadProductService", type = Bulkhead.Type.SEMAPHORE, fallbackMethod = "buildFallBackProduct")
     public ProductResponseDTO getProductById(Long productId) {
         try {
-            Product cachedproduct = checkRedisCache(productId);
-            if (cachedproduct != null) {
-                return convertToDTO(cachedproduct);
+            Product cachedProduct = checkRedisCache(productId);
+            if (cachedProduct != null) {
+                return buildFullResponseDTO(cachedProduct);
             } else {
                 log.debug("Product {} not found in Redis cache", productId);
                 Product product = productRepository.findById(productId)
@@ -68,132 +65,86 @@ public class ProductService {
                 log.debug("Product {} cached in Redis", productId);
                 cacheProductObject(product);
 
-                return convertToDTO(product);
+                return buildFullResponseDTO(product);
             }
         } catch (CustomException e) {
             throw new CustomException("Error retrieving product: " + e.getMessage());
         }
     }
 
-    private ProductResponseDTO convertToDTO(Product product) {
-        ProductResponseDTO dto = new ProductResponseDTO();
-        dto.setProductId(product.getProductId());
-        dto.setName(product.getName());
-        dto.setBrand(product.getBrand());
-        dto.setFullDescription(product.getFullDescription());
-        dto.setPricing(product.getPricing());
-        dto.setListPrice(product.getListPrice());
-        dto.setAvailabilityStatus(product.getAvailabilityStatus());
-        dto.setProductCategory(product.getProductCategory());
-        dto.setProductDimensions(product.getProductDimensions());
-        dto.setDateFirstAvailable(product.getDateFirstAvailable());
-        dto.setManufacturer(product.getManufacturer());
-        dto.setCountryOfOrigin(product.getCountryOfOrigin());
-        dto.setAverageRating(product.getAverageRating());
-        dto.setTotalReviews(product.getTotalReviews());
-        dto.setFiveStarReviews(product.getFiveStarReviews());
-        dto.setFourStarReviews(product.getFourStarReviews());
-        dto.setThreeStarReviews(product.getThreeStarReviews());
-        dto.setTwoStarReviews(product.getTwoStarReviews());
-        dto.setOneStarReviews(product.getOneStarReviews());
+    private ProductResponseDTO buildFullResponseDTO(Product product) {
+        // Map basic product data
+        ProductResponseDTO baseDto = productMapper.toResponseDTO(product);
 
-        // Convert images
-        if (product.getProductImages() != null) {
-            dto.setProductImages(product.getProductImages().stream()
-                    .map(this::convertToImageDTO)
-                    .toList());
-        }
+        // Map images
+        List<ProductImageDTO> imageDTOs = product.getProductImages().stream()
+                .map(productMapper::toImageDTO)
+                .collect(Collectors.toList());
 
-        // Convert features
-        if (product.getFeatureBullets() != null) {
-            dto.setFeatureBullets(product.getFeatureBullets().stream()
-                    .map(this::convertToFeatureDTO)
-                    .toList());
-        }
+        // Map features
+        List<ProductFeatureDTO> featureDTOs = product.getFeatureBullets().stream()
+                .map(productMapper::toFeatureDTO)
+                .collect(Collectors.toList());
 
-        // Fetch reviews using ReviewRestTemplateClient and convert them into DTOs
-        List <Review> reviews = getReviews(product.getProductId());
-        if (reviews != null && !reviews.isEmpty()) {
-            List<ReviewDTO> reviewDTOs = reviews.stream()
-                    .map(this::convertToReviewDTO)
-                    .toList();
-            dto.setReviews(reviewDTOs);
-        }
+        // Get reviews
+        List<Review> reviews = getReviews(product.getProductId());
+        List<ReviewDTO> reviewDTOs = reviewMapper.toDtoList(reviews);
 
-        return dto;
+        // Create a new DTO with all data
+        return new ProductResponseDTO(
+                baseDto.productId(),
+                baseDto.name(),
+                baseDto.brand(),
+                imageDTOs,
+                baseDto.fullDescription(),
+                featureDTOs,
+                baseDto.pricing(),
+                baseDto.listPrice(),
+                baseDto.availabilityStatus(),
+                baseDto.productCategory(),
+                baseDto.productDimensions(),
+                baseDto.dateFirstAvailable(),
+                baseDto.manufacturer(),
+                baseDto.countryOfOrigin(),
+                baseDto.averageRating(),
+                baseDto.totalReviews(),
+                baseDto.fiveStarReviews(),
+                baseDto.fourStarReviews(),
+                baseDto.threeStarReviews(),
+                baseDto.twoStarReviews(),
+                baseDto.oneStarReviews(),
+                reviewDTOs
+        );
     }
 
     private List<Review> getReviews(Long productId) {
         return reviewRestTemplateClient.getAllReviews(productId);
     }
 
-    private ProductImageDTO convertToImageDTO(ProductImage image) {
-        ProductImageDTO dto = new ProductImageDTO();
-        dto.setImageId(Long.valueOf(image.getImageId()));
-        dto.setImageUrl(image.getImageUrl());
-        return dto;
-    }
-
-    private ProductFeatureDTO convertToFeatureDTO(ProductFeatures feature) {
-        ProductFeatureDTO dto = new ProductFeatureDTO();
-        dto.setFeatureId(Long.valueOf(feature.getFeatureId()));
-        dto.setBullet(feature.getBullet());
-        return dto;
-    }
-
-    private ReviewDTO convertToReviewDTO(Review review) {
-        ReviewDTO dto = new ReviewDTO();
-        dto.setReviewId(review.getReviewId());
-        dto.setProductId(review.getProductId());
-        dto.setStars(review.getStars());
-        dto.setReviewDate(review.getReviewDate());
-        dto.setVerifiedPurchase(review.getVerifiedPurchase());
-        dto.setManufacturerReplied(review.getManufacturerReplied());
-        dto.setUserId(review.getUserId());
-        dto.setTitle(review.getTitle());
-        dto.setReviewText(review.getReviewText());
-        dto.setTotalFoundHelpful(review.getTotalFoundHelpful());
-        dto.setImages(review.getImages());
-        return dto;
-    }
-
     @Transactional
     public ProductResponseDTO createProduct(ProductCreateDTO createDTO) {
         try {
-            Product product = new Product();
-            BeanUtils.copyProperties(createDTO, product);
+            // Map DTO to entity
+            Product product = productMapper.toEntity(createDTO);
             product = productRepository.save(product);
 
-            if (createDTO.getImageUrls() != null) {
-                Product finalProduct = product;
-                List<ProductImage> images = createDTO.getImageUrls().stream()
-                        .map(url -> {
-                            ProductImage image = new ProductImage();
-                            image.setProduct(finalProduct);
-                            image.setImageUrl(url);
-                            return image;
-                        })
-                        .toList();
+            // Handle image URLs
+            if (createDTO.imageUrls() != null && !createDTO.imageUrls().isEmpty()) {
+                List<ProductImage> images = productMapper.toProductImageList(createDTO.imageUrls(), product);
                 productImageRepository.saveAll(images);
             }
 
-            if (createDTO.getFeatureBullets() != null) {
-                Product finalProduct1 = product;
-                List<ProductFeatures> features = createDTO.getFeatureBullets().stream()
-                        .map(bullet -> {
-                            ProductFeatures feature = new ProductFeatures();
-                            feature.setProduct(finalProduct1);
-                            feature.setBullet(bullet);
-                            return feature;
-                        })
-                        .toList();
+            // Handle feature bullets
+            if (createDTO.featureBullets() != null && !createDTO.featureBullets().isEmpty()) {
+                List<ProductFeatures> features = productMapper.toProductFeaturesList(createDTO.featureBullets(), product);
                 productFeaturesRepository.saveAll(features);
             }
 
+            // Retrieve the saved product with relationships
             Product savedProduct = productRepository.findById(product.getProductId())
                     .orElseThrow(() -> new RuntimeException("Failed to retrieve saved product"));
 
-            return convertToDTO(savedProduct);
+            return buildFullResponseDTO(savedProduct);
         } catch (Exception e) {
             throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Error creating product", e);
         }
@@ -205,44 +156,27 @@ public class ProductService {
             Product product = productRepository.findById(productId)
                     .orElseThrow(() -> new CustomException("Product not found"));
 
-            if (updateDTO.getName() != null) product.setName(updateDTO.getName());
-            if (updateDTO.getBrand() != null) product.setBrand(updateDTO.getBrand());
-            if (updateDTO.getFullDescription() != null) product.setFullDescription(updateDTO.getFullDescription());
-            if (updateDTO.getPricing() != null) product.setPricing(updateDTO.getPricing());
-            if (updateDTO.getListPrice() != null) product.setListPrice(updateDTO.getListPrice());
-            if (updateDTO.getAvailabilityStatus() != null) product.setAvailabilityStatus(updateDTO.getAvailabilityStatus());
-            if (updateDTO.getProductCategory() != null) product.setProductCategory(updateDTO.getProductCategory());
-            if (updateDTO.getProductDimensions() != null) product.setProductDimensions(updateDTO.getProductDimensions());
-            if (updateDTO.getDateFirstAvailable() != null) product.setDateFirstAvailable(updateDTO.getDateFirstAvailable());
-            if (updateDTO.getManufacturer() != null) product.setManufacturer(updateDTO.getManufacturer());
-            if (updateDTO.getCountryOfOrigin() != null) product.setCountryOfOrigin(updateDTO.getCountryOfOrigin());
+            // Update properties from DTO
+            productMapper.updateProductFromDTO(updateDTO, product);
 
-            if (updateDTO.getImageUrls() != null) {
+            // Handle image URLs replacement
+            if (updateDTO.imageUrls() != null) {
                 productImageRepository.deleteByProduct(product);
 
-                List<ProductImage> newImages = updateDTO.getImageUrls().stream()
-                        .map(url -> {
-                            ProductImage image = new ProductImage();
-                            image.setProduct(product);
-                            image.setImageUrl(url);
-                            return image;
-                        })
-                        .toList();
-                productImageRepository.saveAll(newImages);
+                if (!updateDTO.imageUrls().isEmpty()) {
+                    List<ProductImage> newImages = productMapper.toProductImageList(updateDTO.imageUrls(), product);
+                    productImageRepository.saveAll(newImages);
+                }
             }
 
-            if (updateDTO.getFeatureBullets() != null) {
+            // Handle feature bullets replacement
+            if (updateDTO.featureBullets() != null) {
                 productFeaturesRepository.deleteByProduct(product);
 
-                List<ProductFeatures> newFeatures = updateDTO.getFeatureBullets().stream()
-                        .map(bullet -> {
-                            ProductFeatures feature = new ProductFeatures();
-                            feature.setProduct(product);
-                            feature.setBullet(bullet);
-                            return feature;
-                        })
-                        .toList();
-                productFeaturesRepository.saveAll(newFeatures);
+                if (!updateDTO.featureBullets().isEmpty()) {
+                    List<ProductFeatures> newFeatures = productMapper.toProductFeaturesList(updateDTO.featureBullets(), product);
+                    productFeaturesRepository.saveAll(newFeatures);
+                }
             }
 
             productRepository.save(product);
@@ -252,8 +186,8 @@ public class ProductService {
                     .orElseThrow(() -> new CustomException("Product not found after update"));
 
             removeFromCache(productId);
-            cacheProductObject(freshProduct); // Use the fresh entity
-            return convertToDTO(freshProduct);
+            cacheProductObject(freshProduct);
+            return buildFullResponseDTO(freshProduct);
         } catch (Exception e) {
             log.error("Error updating product {}: {}", productId, e.getMessage(), e);
             throw new CustomException("Error updating product: " + e.getMessage());
@@ -306,16 +240,15 @@ public class ProductService {
             removeFromCache(productId);
 
             // Create response
-            ProductDeletionResponseDTO response = new ProductDeletionResponseDTO();
-            response.setProductId(productId);
-            response.setProductName(product.getName());
-            response.setImagesDeleted(imagesCount);
-            response.setFeaturesDeleted(featuresCount);
-            response.setReviewsDeleted(reviewsCount);
-            response.setDeletionTimestamp(LocalDateTime.now());
-            response.setMessage("Product and related data successfully deleted");
-
-            return response;
+            return new ProductDeletionResponseDTO(
+                    productId,
+                    product.getName(),
+                    imagesCount,
+                    featuresCount,
+                    reviewsCount,
+                    LocalDateTime.now(),
+                    "Product and related data successfully deleted"
+            );
         } catch (Exception e) {
             log.error("Error deleting product {}: {}", productId, e.getMessage(), e);
             throw new CustomException("Error deleting product: " + e.getMessage());
@@ -329,12 +262,12 @@ public class ProductService {
             List<ProductSearchResultDTO> dtos = new ArrayList<>();
             for (Object[] result : results)
                 try {
-                    ProductSearchResultDTO dto = new ProductSearchResultDTO();
-                    dto.setProductId(((Number) result[0]).longValue());
-                    dto.setName((String) result[1]);
-                    dto.setPricing((BigDecimal) result[2]);  // Check this cast particularly
-                    dto.setFirstImage((String) result[3]);
-                    dtos.add(dto);
+                    Long productId = ((Number) result[0]).longValue();
+                    String name = (String) result[1];
+                    BigDecimal pricing = (BigDecimal) result[2];
+                    String firstImage = (String) result[3];
+
+                    dtos.add(new ProductSearchResultDTO(productId, name, pricing, firstImage));
                 } catch (Exception e) {
                     log.error("Error mapping result: {}", Arrays.toString(result), e);
                 }
@@ -371,12 +304,12 @@ public class ProductService {
         }
     }
 
-
     @SuppressWarnings("unused")
     private void randomlyRunLong() throws InterruptedException, TimeoutException {
         int randomNum = random.nextInt(3) + 1;
         if (randomNum == 3) sleep();
     }
+
     private void sleep() throws InterruptedException, TimeoutException {
         Thread.sleep(5000);
         throw new TimeoutException();
@@ -384,29 +317,29 @@ public class ProductService {
 
     @SuppressWarnings("unused")
     private ProductResponseDTO buildFallBackProduct(Long productId, Throwable t) {
-        ProductResponseDTO fallback = new ProductResponseDTO();
-        fallback.setProductId(0L);
-        fallback.setName("N/A");
-        fallback.setBrand("N/A");
-        fallback.setProductImages(List.of());
-        fallback.setFullDescription("N/A");
-        fallback.setFeatureBullets(List.of());
-        fallback.setPricing(BigDecimal.valueOf(0.0));
-        fallback.setListPrice(BigDecimal.valueOf(0.0));
-        fallback.setAvailabilityStatus("N/A");
-        fallback.setProductCategory("N/A");
-        fallback.setProductDimensions("N/A");
-        fallback.setDateFirstAvailable(null);
-        fallback.setManufacturer("N/A");
-        fallback.setCountryOfOrigin("N/A");
-        fallback.setAverageRating(0.0);
-        fallback.setTotalReviews(0);
-        fallback.setFiveStarReviews(0);
-        fallback.setFourStarReviews(0);
-        fallback.setThreeStarReviews(0);
-        fallback.setTwoStarReviews(0);
-        fallback.setOneStarReviews(0);
-        fallback.setReviews(List.of());
-        return fallback;
+        return new ProductResponseDTO(
+                0L,
+                "N/A",
+                "N/A",
+                List.of(),
+                "N/A",
+                List.of(),
+                BigDecimal.valueOf(0.0),
+                BigDecimal.valueOf(0.0),
+                "N/A",
+                "N/A",
+                "N/A",
+                null,
+                "N/A",
+                "N/A",
+                0.0,
+                0,
+                0,
+                0,
+                0,
+                0,
+                0,
+                List.of()
+        );
     }
 }
